--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfRegistroDeSocios.MainWindow"
+<Window x:Class="WpfRegistroDeSocios.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,38 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TextBox HorizontalAlignment="Left" Height="17" Margin="299,10,0,0" TextWrapping="Wrap" Text="Registro de Socios ejemplo" VerticalAlignment="Top" Width="114"/>
+        <TextBox HorizontalAlignment="Left" Height="17" Margin="299,10,0,0" TextWrapping="Wrap" Text="Registro de Socios" VerticalAlignment="Top" Width="114"/>
+        <Label Content="Socio" HorizontalAlignment="Left" Margin="47,71,0,0" VerticalAlignment="Top"/>
+        <Label Content="RUT: " HorizontalAlignment="Left" Margin="47,102,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtRut" HorizontalAlignment="Left" Height="19" Margin="90,105,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="173"/>
+        <Label Content="Nombre:" HorizontalAlignment="Left" Margin="28,153,0,0" VerticalAlignment="Top"/>
+        <Label Content="Apellido" HorizontalAlignment="Left" Margin="193,153,0,0" VerticalAlignment="Top"/>
+        <Label Content="Edad" HorizontalAlignment="Left" Margin="320,153,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNombre" HorizontalAlignment="Left" Height="17" Margin="26,179,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150"/>
+        <TextBox x:Name="txtApellido" HorizontalAlignment="Left" Height="17" Margin="193,179,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtEdad" HorizontalAlignment="Left" Height="17" Margin="326,179,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="42"/>
+        <Label Content="Género" HorizontalAlignment="Left" Margin="42,217,0,0" VerticalAlignment="Top" FontSize="10"/>
+        <Label Content="Actividades" HorizontalAlignment="Left" Margin="186,217,0,0" VerticalAlignment="Top" FontSize="10"/>
+        <RadioButton x:Name="rbFemeninos" Content="Femeninos" HorizontalAlignment="Left" Height="14" Margin="42,240,0,0" VerticalAlignment="Top" Width="96" FontSize="11"/>
+        <RadioButton x:Name="rbMasculinos" Content="Masculinos" HorizontalAlignment="Left" Height="14" Margin="42,259,0,0" VerticalAlignment="Top" Width="96" FontSize="11"/>
+        <RadioButton x:Name="rbFutbol" Content="Fútbol" HorizontalAlignment="Left" Height="14" Margin="186,240,0,0" VerticalAlignment="Top" Width="96" FontSize="11"/>
+        <RadioButton x:Name="rbTenis" Content="Tenis" HorizontalAlignment="Left" Height="14" Margin="186,259,0,0" VerticalAlignment="Top" Width="96" FontSize="11"/>
+        <Button Content="Calcular" HorizontalAlignment="Left" Height="19" Margin="320,240,0,0" VerticalAlignment="Top" Width="74"/>
+        <Label Content="Total General" HorizontalAlignment="Left" Margin="42,278,0,0" VerticalAlignment="Top" FontSize="11" Foreground="#FFC80909"/>
+        <Label Content="Total A Pagar" HorizontalAlignment="Left" Margin="197,309,0,0" VerticalAlignment="Top" FontSize="11" Foreground="#FFC80909"/>
+        <Label Content="A pagar Por Funcionario:" HorizontalAlignment="Left" Margin="197,334,0,0" VerticalAlignment="Top" FontSize="11" Foreground="#FFC80909"/>
+        <Label Content="A pagar Por la Empresa" HorizontalAlignment="Left" Margin="197,359,0,0" VerticalAlignment="Top" FontSize="11" Foreground="#FFC80909"/>
+        <Button x:Name="btnLimpiar" Content="Limpiar" HorizontalAlignment="Left" Height="19" Margin="503,315,0,0" VerticalAlignment="Top" Width="74"/>
+        <Button x:Name="btnCerrar" Content="Cerrar" HorizontalAlignment="Left" Height="19" Margin="503,346,0,0" VerticalAlignment="Top" Width="74"/>
+        <TextBox x:Name="txtTotalAPagar" HorizontalAlignment="Left" Height="19" Margin="338,312,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="135"/>
+        <TextBox x:Name="txtAPagarPorFuncionario" HorizontalAlignment="Left" Height="19" Margin="338,337,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="135"/>
+        <TextBox x:Name="txtAPagarPorLaEmpresa" HorizontalAlignment="Left" Height="19" Margin="338,361,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="135"/>
+        <Label Content="Socios Femeninos" HorizontalAlignment="Left" Margin="4,305,0,0" VerticalAlignment="Top" Width="86" FontSize="9"/>
+        <Label Content="Socios Masculinos" HorizontalAlignment="Left" Margin="4,327,0,0" VerticalAlignment="Top" Width="86" FontSize="9"/>
+        <Label Content="Promedio Edad" HorizontalAlignment="Left" Margin="4,350,0,0" VerticalAlignment="Top" Width="86" FontSize="9"/>
+        <TextBox x:Name="txtSociosFemeninos" HorizontalAlignment="Left" Height="16" Margin="101,308,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58"/>
+        <TextBox x:Name="txtSociosMaculinos" HorizontalAlignment="Left" Height="16" Margin="101,329,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58"/>
+        <TextBox x:Name="txtPromedioEdad" HorizontalAlignment="Left" Height="16" Margin="101,354,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="58"/>
 
     </Grid>
 </Window>
